Add archunit tests to check no sport package in common and MinioClient injection